--- a/index.html
+++ b/index.html
@@ -60,8 +60,25 @@
     </div>
     <!--  -->
     <div class="container-dua" id="Fasilitas">
-      
-
+      <div class="icon-set">
+        <div>
+          <a href="https://www.instagram.com/rm_sarirasa_kendal"><img src="img/insta-300.png" alt=""></a>
+          <p>rm_sarirasa_kendal</p>
+        </div>
+        <div class="icon-email">
+          <a href=""><img src="img/email-300.png" alt="" "></a>
+          <p>@sarirasa098@gmail.com</p>
+        </div>
+        <div>
+          <img src="img/phone-300.png" alt="">
+          <p>081 127 0606</p>
+          <p></p>
+        </div>
+        <div>
+          <img src="img/home-phone-300.png" alt="">
+          <p>(0294) 641 888</p>
+        </div>
+      </div>
     </div>
 
       <div class="container-tiga" id="highlight">
