--- a/try.html
+++ b/try.html
@@ -9,12 +9,24 @@
 <body>
     <div class="grandparent">
         <div class='parent'>
-            <div class='child'>child 1</div>
-            <div class='child'>child 2</div>
+            <div class='child'>
+                <a href="https://www.instagram.com/rm_sarirasa_kendal"><img src="img/insta-300.png" alt=""></a>
+                <p>@rm_sarirasa_kendal</p>
+            </div>
+            <div class='child'>
+                <a href=""><img src="img/email-300.png" alt=""></a>
+                <p>sarirasa098@gmail.com</p>
+            </div>
         </div>
         <div class='parent'>
-            <div class='child'>child 1</div>
-            <div class='child'>child 2</div>
+            <div class='child'>
+                <img src="img/phone-300.png" alt="">
+                <p>081 127 0606</p>
+            </div>
+            <div class='child'>
+                <img src="img/home-phone-300.png" alt="">
+                <p>(0294) 641 888</p>
+            </div>
         </div>
     </div>
 
