fasilitas 1 finish not responsive

--- a/try.html
+++ b/try.html
@@ -29,8 +29,11 @@
             </div>
         </div>
     </div>
-    <div class="containerr">
-
+    <div class="container">
+        <div class="parent-1">
+            <div class="child-01"></div>
+            <div class="child-02"></div>
+        </div>
     </div>
 </body>
 </html>
